--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, file
+log4j.rootLogger=DEBUG, file
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
@@ -7,7 +7,7 @@ log4j.appender.file=org.apache.log4j.RollingFileAppender
 #Redirect to Tomcat logs folder
 #log4j.appender.file.File=${catalina.home}/logs/logging.log
 
-log4j.appender.file.File=/var/log/quant.log
+log4j.appender.file.File=/home/xjin/log/quant.log
 log4j.appender.file.MaxFileSize=100MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
